[gd_scene load_steps=6 format=3 uid="uid://be26eggrnftw"]

[ext_resource type="Script" uid="uid://b5dofh5uhs3v7" path="res://pause_menu.gd" id="1_qo3ou"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qo3ou"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxsxs"]
bg_color = Color(0.899258, 0.899258, 0.899258, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3hrf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgeum"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qo3ou")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -78.0
offset_right = 165.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qo3ou")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxsxs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o3hrf")
theme_override_styles/normal = SubResource("StyleBoxFlat_xgeum")
text = "Resume"
metadata/_edit_group_ = true

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qo3ou")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxsxs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o3hrf")
theme_override_styles/normal = SubResource("StyleBoxFlat_xgeum")
text = "Restart"
metadata/_edit_group_ = true

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qo3ou")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxsxs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o3hrf")
theme_override_styles/normal = SubResource("StyleBoxFlat_xgeum")
text = "Options
"
metadata/_edit_group_ = true

[node name="SaveExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qo3ou")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxsxs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o3hrf")
theme_override_styles/normal = SubResource("StyleBoxFlat_xgeum")
text = "Exit"
metadata/_edit_group_ = true

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveExit" to="." method="_on_save_exit_pressed"]
